--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,15 @@ volumes:
 services:
   db:
     image: postgres:13
+    env_file: .env
     volumes:
       - pg_data:/var/lib/postgresql/data
   backend:
     build: ./backend/
     env_file: .env
+    volumes:
+      - static_volume:/backend_static
+      - media_volume:/media
   frontend:
     env_file: .env
     build: ./frontend/
