--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,30 +1,35 @@
 volumes:
-  pg_data_production:
-  static_volume:
+  pg_data:
+  static:
+  media:
 
-# Всё отличие — заменяем build на image и указываем, какой образ использовать
 services:
   db:
     image: postgres:13.10
     env_file: .env
     volumes:
-      - pg_data_production:/var/lib/postgresql/data
+      - pg_data:/var/lib/postgresql/data
   backend:
-    image: jlanceth/kittygram_backend
+    #build: ./backend/
+    image: Jlanceth/kittygram_backend
     env_file: .env
     volumes:
-      - static_volume:/backend_static
+      - static:/backend_static
+      - media:/app/media/cats/images
   frontend:
-    image: jlanceth/kittygram_frontend  # Качаем с Docker Hub
+    #build: ./frontend/ 
+    image: Jlanceth/kittygram_frontend
     env_file: .env
-    command: cp -r /app/build/. /frontend_static/
+    command: cp -r /app/build/. /static/
     volumes:
-      - static_volume:/frontend_static
+      - static:/static
   gateway:
-    image: jlanceth/kittygram_gateway  # Качаем с Docker Hub
+    #build: ./nginx/
+    image: Jlanceth/kittygram_gateway
     env_file: .env
     volumes:
-      - static_volume:/staticfiles/
+      - static:/static
+      - media:/app/media/cats/images
     ports:
       - 9000:80
 
