--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -10,21 +10,20 @@ services:
     volumes:
       - pg_data:/var/lib/postgresql/data
   backend:
-    #build: ./backend/
     image: jlanceth/kittygram_backend
     env_file: .env
     volumes:
       - static:/backend_static
       - media:/app/media/cats/images
+    depends_on:
+      - db
   frontend:
-    #build: ./frontend/ 
     image: jlanceth/kittygram_frontend
     env_file: .env
     command: cp -r /app/build/. /static/
     volumes:
       - static:/static
   gateway:
-    #build: ./nginx/
     image: jlanceth/kittygram_gateway
     env_file: .env
     volumes:
